# raiderIOWatch

./: .gitignore  LICENSE  README.md  pydantic_data_with_scores.json
raiderioWatch/: chunks.json  ddb_fomat_data.json  pydantic_data.json  pydantic_data_with_scores.json  pyproject.toml  requirements.txt
raiderioWatch/raideriowatch/: .env  create_ddb.py  db.py  ddb.py  ddb_handler.py  ddb_util.py  guild_crawler.py  handler.py  main.py  member.py  member_crawler.py  member_handler.py  members.csv  members.json  members_to_ddb.json  processed_members.json  requests.py  score_query.py  test_entry.json  utils.py
raiderioWatch/raideriowatch/data/: members.csv
raiderioWatch/raideriowatch/db/: ddb.py  ddb_handler.py  ddb_write.py
raiderioWatch/raideriowatch/lambda_handlers/: handler.py  member_handler.py
raiderioWatch/raideriowatch/models/: db_item.py  member.py
raiderioWatch/raideriowatch/outputs/: chunks.json  members_to_ddb.json  processed_members.json  pydantic_data.json  pydantic_data_with_scores.json
raiderioWatch/raideriowatch/src/: guild_crawler.py  main.py  member_crawler.py  requests.py
raiderioWatch/raideriowatch/tests/: pytest.ini  test_ddb.py  test_get_guild.py  test_get_member.py  test_load_data.py  test_member.py  test_time_crawl_member.py
raiderioWatch/raideriowatch/utils/: aws_utils.py  helpers.py  legacy.py  model_utils.py  preprocess.py
